add PROTO:SG-SG-<IN|E>GRESS rules API
